Hold a strong ref to the node we plan to remove, since we want to use it after removing it from the tree.  Bug 221494, r+sr=jst